fix cover art size effect to not be buggy on firefox

--- a/data/music.css
+++ b/data/music.css
@@ -49,12 +49,16 @@
 }
 
 .cover-art.image {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	width: 100%;
 	height: 100%;
-	transition: scale 0.13s ease-in;
+	transition: width 0.13s ease-in, height 0.13s ease-in;
 }
 
-.cover-art.image:hover { scale: 1.05; }
+.cover-art.image:hover { width: 107%; height: 107%; }
 
 .content-box {
 	display: flex;
